# bmi_challenge

./: Makefile  README.md  _patients.json  bmi_labels.json  contants.py  he_did_it_with_pandas.py  labeled_patients.csv  main.py  models.py  patients.json  pyproject.toml  repositories.py  services.py  use_cases.py
tests/: conftest.py
tests/services/: test_calculate_bmi.py  test_label_bmi.py
tests/use_cases/: test_label_patient_bmi.py
