[tool.poetry]
name = "bmi_challenge"
version = "0.1.0"
description = ""
authors = ["Shinkenuu"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pandas = "^1.4.4"
tqdm = "^4.64.1"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
